--- a/ZPGStupka/ZPGStupka.vcxproj.filters
+++ b/ZPGStupka/ZPGStupka.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\meshes">
+      <UniqueIdentifier>{f2e60b3f-9362-4d3d-aafb-61651bd7ada0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -25,6 +28,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ShaderProgram.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -42,24 +48,30 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="models\bushes.h">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\meshes</Filter>
     </ClInclude>
     <ClInclude Include="models\gift.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="models\plain.h">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\meshes</Filter>
     </ClInclude>
     <ClInclude Include="models\sphere.h">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\meshes</Filter>
     </ClInclude>
     <ClInclude Include="models\suzi_flat.h">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\meshes</Filter>
     </ClInclude>
     <ClInclude Include="models\suzi_smooth.h">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\meshes</Filter>
     </ClInclude>
     <ClInclude Include="models\tree.h">
+      <Filter>Source Files\meshes</Filter>
+    </ClInclude>
+    <ClInclude Include="models\plain.h">
+      <Filter>Source Files\meshes</Filter>
+    </ClInclude>
+    <ClInclude Include="Libraries.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
