--- a/ZPGStupka/ZPGStupka.vcxproj
+++ b/ZPGStupka/ZPGStupka.vcxproj
@@ -134,13 +134,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="ComplexScene.cpp" />
+    <ClCompile Include="DrawableObject.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
-    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="App.cpp" />
+    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
+    <ClCompile Include="TriangleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ComplexScene.h" />
+    <ClInclude Include="DrawableObject.h" />
     <ClInclude Include="Libraries.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="models\bushes.h" />
@@ -151,10 +157,12 @@
     <ClInclude Include="models\suzi_smooth.h" />
     <ClInclude Include="models\tree.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="App.h" />
+    <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Timer.h" />
+    <ClInclude Include="TriangleScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
